Zcombine wrong alpha clipping since 2.67 #35586

Closed
opened 2013-05-31 20:06:32 +02:00 by Paul Andruchiewicz · 10 comments

%%%--- Operating System, Graphics card ---
Windows 7 64bit, Nvidia 550ti

- Blender version with error, and version that worked ---

since 2.67 it works wrong/different. in 2.66a it has worked well (for me)

- Short description of error ---

You can look in my blendfile. There are two renderlayers and they are put together with z combine node. When "use alpha" is activated the grid is nearly invisible in blender 2.67. In blender 2.66 it worked different/better. It seems if the clipping of the alpha channel changed but why? Its not the reason of different user preferences and i see no way to control it.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, Nvidia 550ti - Blender version with error, and version that worked --- since 2.67 it works wrong/different. in 2.66a it has worked well (for me) - Short description of error --- You can look in my blendfile. There are two renderlayers and they are put together with z combine node. When "use alpha" is activated the grid is nearly invisible in blender 2.67. In blender 2.66 it worked different/better. It seems if the clipping of the alpha channel changed but why? Its not the reason of different user preferences and i see no way to control it. - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%The render layers all have alpha 1, so the "use alpha" in zcombine should simply have no effect.
Disable it for now to get it render fine.

Will ask Jeroen if he can find why this fails now.%%%

%%%The render layers all have alpha 1, so the "use alpha" in zcombine should simply have no effect. Disable it for now to get it render fine. Will ask Jeroen if he can find why this fails now.%%%

%%%when i disable alpha, i get white edges. %%%

%%%when i disable alpha, i get white edges. %%%

%%%Seems to be related to cycles renders. Blender internal works fine. Cycles renders with narrow edges creates artifacts. Not sure why but could be uninitialized memory.
Z buffer seems to be correct.%%%

%%%Seems to be related to cycles renders. Blender internal works fine. Cycles renders with narrow edges creates artifacts. Not sure why but could be uninitialized memory. Z buffer seems to be correct.%%%
Member

%%%According to Brecht, cycles has thinnier Z-Edges than Blender internal. So basically it is not an issue of the compositor, but on the input data.
%%%

%%%According to Brecht, cycles has thinnier Z-Edges than Blender internal. So basically it is not an issue of the compositor, but on the input data. %%%

%%%i remind : 2.66a it worked well%%%

%%%i remind : 2.66a it worked well%%%

%%%If this worked in 2.66, then this is a regression and should be fixed.

Brecht, could you check if this is really a problem of Cycles? %%%

%%%If this worked in 2.66, then this is a regression and should be fixed. Brecht, could you check if this is really a problem of Cycles? %%%

%%%I discussed this with Jeroen on IRC. The problem is that the "antialiasing" Z Combine does is designed to work with Blender Internal Z passes but doesn't work well with Cycles. I wouldn't say either is wrong and personally think the Cycles Z pass make more sense (and it kind of shows by it not needing this antialiasing step as much).

It's a regression compared to 2.66 because it was actually broken for Blender Internal there, now that's fixed but it breaks behavior for Cycles again and works like the old compositor. Not sure what the best solution is, maybe this node should have an option to control the antialiasing. That's a bit annoying but I also don't like to change the Z pass of either Cycles or Blender Internal.%%%

%%%I discussed this with Jeroen on IRC. The problem is that the "antialiasing" Z Combine does is designed to work with Blender Internal Z passes but doesn't work well with Cycles. I wouldn't say either is wrong and personally think the Cycles Z pass make more sense (and it kind of shows by it not needing this antialiasing step as much). It's a regression compared to 2.66 because it was actually broken for Blender Internal there, now that's fixed but it breaks behavior for Cycles again and works like the old compositor. Not sure what the best solution is, maybe this node should have an option to control the antialiasing. That's a bit annoying but I also don't like to change the Z pass of either Cycles or Blender Internal.%%%

%%%Add an option to the node now, you can disable it to get the result from the 2.64 to 2.66 releases.%%%

%%%Add an option to the node now, you can disable it to get the result from the 2.64 to 2.66 releases.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35586
No description provided.