Fix #35586: add an option to the Z Combine compositing node to disable the Z buffer antialiasing that was restored in 2.67 after it was missing in the new compositor implementation.

This option tends to make results worse rather then better for Cycles renders,
but is useful for Blender internal. Their Z-buffers look quite different for
antialiasing, and I'd rather not change either.